--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@
 }
 
 html{
-	font-size: 100%;
+	font-size: 105%;
 }
 
 body {
@@ -79,4 +79,40 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	min-height: 100vh;
+}
+
+@media screen and (max-width: 2000px){
+	html{
+		font-size: 94%;
+	}
+}
+
+@media screen and (max-width: 1800px){
+	html{
+		font-size: 88%;
+	}
+}
+
+@media screen and (max-width: 1600px){
+	html{
+		font-size: 82%;
+	}
+}
+
+@media screen and (max-width: 1400px){
+	html{
+		font-size: 76%;
+	}
+}
+
+@media screen and (max-width: 1200px){
+	html{
+		font-size: 70%;
+	}
+}
+
+@media screen and (max-width: 1000px){
+	html{
+		font-size: 64%;
+	}
 }
